--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: learning notes
+title: notes
 
 # Short description of your site
-description: hard hard study day day up
+description: hard hard study
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -21,7 +21,7 @@ url: "gogolqx.github.io"
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  #Notes:
+  Tags: url+"/tags/"
     #- categories: "http://deanattali.com/beautiful-jekyll/"
     
   #Author's home: "http://deanattali.com"
