--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ url: "gogolqx.github.io"
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Tags: url+"/tags/"
+  Tags: "tags"
     #- categories: "http://deanattali.com/beautiful-jekyll/"
     
   #Author's home: "http://deanattali.com"
