--- a/_data/SocialNetworks.yml
+++ b/_data/SocialNetworks.yml
@@ -33,7 +33,7 @@ email:
 
 linkedin:
   name: "LinkedIn"
-  baseURL: "https://linkedin.com/in/"
+  baseURL: "https://www.linkedin.com/in/qiaoxi-liu-483802146/"
   icon: "fa-linkedin"
 
 xing:
